Add bigram freq csv and notebook

--- a/sample/wiki_ngrams.ipynb
+++ b/sample/wiki_ngrams.ipynb
@@ -87,7 +87,7 @@
     "\n",
     "df = spark.read.format(\"csv\") \\\n",
     "    .option(\"header\", \"true\") \\\n",
-    "    .load(\"./corpus.csv\")\n",
+    "    .load(\"../corpus.csv\")\n",
     "\n",
     "df.rdd.getNumPartitions()"
    ]
